force-app/main/default/objects/Auth_Provider__mdt/fields/Authorize_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Endpoint_URL__c</fullName>
    <label>Authorize Endpoint URL</label>
    <type>Url</type>
</CustomField>