force-app/main/default/objects/Auth_Provider__mdt/fields/Channels_Info_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Channels_Info_Endpoint_URL__c</fullName>
    <label>Channels Info Endpoint URL</label>
    <type>Url</type>
</CustomField>