force-app/main/default/objects/Auth_Provider__mdt/fields/Kakao_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Kakao_Channel_Id__c</fullName>
    <label>Kakao Channel Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>