force-app/main/default/objects/Auth_Provider__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <length>150</length>
    <type>Text</type>
</CustomField>