force-app/main/default/objects/Auth_Provider__mdt/fields/Service_Terms_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Service_Terms_Endpoint_URL__c</fullName>
    <label>Service Terms Endpoint URL</label>
    <type>Url</type>
</CustomField>