force-app/main/default/objects/Auth_Provider__mdt/fields/Shipping_Address_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Endpoint_URL__c</fullName>
    <label>Shipping Address Endpoint URL</label>
    <type>Url</type>
</CustomField>