force-app/main/default/objects/Auth_Provider__mdt/fields/Token_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint_URL__c</fullName>
    <label>Token Endpoint URL</label>
    <type>Url</type>
</CustomField>