force-app/main/default/objects/Auth_Provider__mdt/fields/User_Info_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>User_Info_Endpoint_URL__c</fullName>
    <label>User Info Endpoint URL</label>
    <type>Url</type>
</CustomField>